--- a/docs/index.css
+++ b/docs/index.css
@@ -117,16 +117,16 @@
     width: 100%;
 }
 body {
-  background: linear-gradient(-30deg, #009dff, #093c8f, #2a9df4, #0da2ff);
+  background: linear-gradient(-30deg, #977614, #ff0000, #2a9df4, #0da2ff);
   background-size: 400% 300%;
   animation: gradient 10s ease infinite;
 }
 
 @media screen and (max-width: 768px) {
     body {
-      background: linear-gradient(-30deg, #009dff,  #062557, #093c8f, #2a9df4, #0da2ff);
-      background-size: 500% 200%;
-      animation: gradient 20s ease infinite;
+      background: linear-gradient(-33deg, #997b11,  #ff0033, #fe5703, #2a9df4, #3f9e19);
+      background-size: 100% 100%;
+      animation: gradient 2s ease infinite;
     }
 }
 @keyframes gradient {
@@ -149,8 +149,8 @@ section::after {
   content: '';
   width: 100%;
   height: 80%;
-  background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 10%,rgba(0,0,0,.6) 110%);
-  background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 10%,rgba(0,0,0,.6) 110%);
+  background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 10%,rgba(0,0,0,.3) 110%);
+  background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 10%,rgba(0,0,0,.3) 110%);
 }
 .scrolldown a {
   position: fixed;
@@ -255,4 +255,3 @@ section::after {
     position: relative;
     z-index: 5;
 }
- 
