--- a/docs/index.css
+++ b/docs/index.css
@@ -117,14 +117,17 @@
     width: 100%;
 }
 body {
-  background: linear-gradient(-30deg, #977614, #ff0000, #2a9df4, #0da2ff);
+  background: linear-gradient(-30deg, #009dff,  #062557, #093c8f, #2a9df4, #0da2ff);
   background-size: 400% 300%;
   animation: gradient 10s ease infinite;
+}
+body > * {
+  background: white;
 }
 
 @media screen and (max-width: 768px) {
     body {
-      background: linear-gradient(-33deg, #997b11,  #ff0033, #fe5703, #2a9df4, #3f9e19);
+      background: linear-gradient(-33deg, #009dff,  #062557, #093c8f, #2a9df4, #0da2ff);
       background-size: 100% 100%;
       animation: gradient 2s ease infinite;
     }
@@ -149,12 +152,12 @@ section::after {
   content: '';
   width: 100%;
   height: 80%;
-  background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 10%,rgba(0,0,0,.3) 110%);
-  background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 10%,rgba(0,0,0,.3) 110%);
+  background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 60%,rgba(0,0,0,.6) 110%);
+  background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.1) 60%,rgba(0,0,0,.6) 110%);
 }
 .scrolldown a {
   position: fixed;
-  bottom: 20px;
+  bottom:  -80px;
   left: 50%;
   z-index: 2;
   display: inline-block;
@@ -191,7 +194,7 @@ section::after {
 @media screen and (max-width: 768px) {
     .scrolldown a {
       position: fixed;
-      bottom: 20px;
+      bottom: -90px;
       left: 50%;
       z-index: 2;
       display: inline-block;
@@ -207,7 +210,7 @@ section::after {
       opacity: .5;
     }
     #scrolldown a {
-      padding-top: 100px;
+      padding-top: 70px;
     }
     #scrolldown a span {
       position: absolute;
