--- a/docs/index.css
+++ b/docs/index.css
@@ -2,118 +2,7 @@
     --darkgray: #212329;
     --brightgray: #828387;
 }
-.nav-container {
-    position: relative;
-    background-color: var(--darkgray);
-    width: 100%;
-}
-.navbar {
-    display: grid;
-    grid-template-columns: 0.2fr auto 1fr;
-    align-items: center;
-    height: 80px;
-    width: 90%;
-    margin: 0 auto;
-}
-#navbar-logo {
-    color: #fff;
-    justify-self: start;
-    margin-left: 20px;
-}
-.nav-menu {
-    display: grid;
-    grid-template-columns: repeat(4, auto);
-    list-style: none;
-    text-align: center;
-    width: 70%;
-    justify-self: end;
-}
-.nav-links {
-    color: #fff;
-    text-decoration: none;
-}
-.nav-menu.active {
-    background: var(--darkgray);
-    left:0;
-    opacity: 1;
-    transition: all 0.5s ease;
-}
-.nav-links {
-    text-align: center;
-    line-height: 60px;
-    display: table;
-}
-.menu-toggle .bar {
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    transition: all 0.3s ease-in-out;
-    background: #fff;
-}
-@media screen and (max-width: 768px) {
-    .nav-container {
-        position: relative
-    }
-    .nav-menu {
-        display: grid;
-        grid-template-columns: auto;
-        background: var(--brightgray);
-        margin: 0;
-        width: 100%;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 0;
-        transition: all 0.5s ease;
-    }
-    #navbar-logo {
-        margin-left: 20px;
-    }
-    .nav-menu.active {
-        background: var(--darkgray);
-        left: 0;
-        opacity: 1;
-        transition: all 0.5 ease;
-    }
-    .nav-links {
-        text-align: center;
-        line-height: 60px;
-        width: 100%;
-        display: table;
-    }
-    .nav-links:hover {
-        background-color: var(--brightgray);
-        color: #111;
-        transition: all 0.8s ease-out;
-    }
-    .navbar {
-        width: 100%;
-    }
-    #mobile-menu {
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);
-    }
-    .menu-toggle .bar {
-        display: block;
-        cursor: pointer;
-        cursor: pointer;
-    }
-    .menu-toggle:hover {
-        cursor: pointer;
-    }
-    #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 0;
-    }
-    #mobile-menu.is-active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-    #mobile-menu.is-active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
-}
-.freiburgskyline{
+freiburgskyline{
     width: 100%;
 }
 body {
