--- a/docs/nav-round.css
+++ b/docs/nav-round.css
@@ -21,7 +21,7 @@ Primary style
   }
 
   a {
-    color: #ffffff;
+    color: #87ddff;
     text-decoration: none;
   }
 
@@ -54,8 +54,8 @@ Primary style
   .cd-nav-trigger {
     top: 18px;
     right: 5%;
-    height: 44px;
-    width: 44px;
+    height: 50px;
+    width: 50px;
     z-index: 50;
     /* image replacement */
     overflow: hidden;
@@ -136,7 +136,7 @@ Primary style
     transition-property: transform;
   }
   .cd-nav-trigger::before {
-    background-color: #091d23;
+    background-color: #093c8f;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -ms-transform: scale(1);
